@@ -1,8 +1,9 @@
 package jml.impl;
 
-import jml.JmlCommentType;
+import jml.JmlComment;
 import jml.KeyJmlLexer;
 import jml.services.IJmlDetection;
+import lombok.var;
 import org.antlr.v4.runtime.CharStreams;
 import org.antlr.v4.runtime.Token;
 import org.jetbrains.annotations.NotNull;
@@ -33,11 +34,11 @@ public class SimpleJmlDetection implements IJmlDetection {
     public Set<String> getAnnotationKeys(@NotNull String comment) {
         var m = JML_COMMENT_PATTERN.matcher(comment);
         if (m.matches()) {
-            if (m.groupCount() >= 3 && !m.group(2).isBlank()) {
+            if (m.groupCount() >= 3 && !m.group(2).trim().isEmpty()) {
                 Set<String> s = new TreeSet<>();
                 var annotations = m.group(2);
                 Pattern.compile("(?=[+-])").splitAsStream(annotations)
-                        .filter(it -> !it.isBlank())
+                        .filter(it -> !it.trim().isEmpty())
                         .forEach(s::add);
                 return s;
             }
@@ -47,7 +48,7 @@ public class SimpleJmlDetection implements IJmlDetection {
     }
 
     @Override
-    public JmlCommentType getType(String comment) {
+    public JmlComment.Type getType(String comment) {
         KeyJmlLexer lexer = new KeyJmlLexer(CharStreams.fromString(comment));
         boolean onlyModifier = true;
         Token tok;
@@ -66,32 +67,32 @@ public class SimpleJmlDetection implements IJmlDetection {
                 case KeyJmlLexer.NORMAL_BEHAVIOR:
                 case KeyJmlLexer.EXCEPTIONAL_BEHAVIOR:
                 case KeyJmlLexer.MODEL_BEHAVIOR:
-                    return JmlCommentType.METHOD_CONTRACT;
+                    return JmlComment.Type.METHOD_CONTRACT;
                 case KeyJmlLexer.BREAK_BEHAVIOR:
                 case KeyJmlLexer.CONTINUE_BEHAVIOR:
                 case KeyJmlLexer.RETURN_BEHAVIOR:
-                    return JmlCommentType.BLOCK_CONTRACT;
+                    return JmlComment.Type.BLOCK_CONTRACT;
 
                 case KeyJmlLexer.ASSERT:
-                    return JmlCommentType.ASSERT;
+                    return JmlComment.Type.ASSERT;
 
                 case KeyJmlLexer.MODEL:
                 case KeyJmlLexer.MODEL_METHOD_AXIOM:
-                    return JmlCommentType.MODEL;
+                    return JmlComment.Type.MODEL;
 
                 case KeyJmlLexer.INVARIANT:
                 case KeyJmlLexer.CONSTRAINT:
                 case KeyJmlLexer.INITIALLY:
                 case KeyJmlLexer.AXIOM:
-                    return JmlCommentType.CLASS_INVARIANT;
+                    return JmlComment.Type.CLASS_INVARIANT;
 
                 case KeyJmlLexer.GHOST:
-                    return JmlCommentType.GHOST_FIELD;
+                    return JmlComment.Type.GHOST_FIELD;
                 case KeyJmlLexer.LOOP_INVARIANT:
-                    return JmlCommentType.LOOP_INVARIANT;
+                    return JmlComment.Type.LOOP_INVARIANT;
 
                 case KeyJmlLexer.SET:
-                    return JmlCommentType.GHOST_SET;
+                    return JmlComment.Type.GHOST_SET;
 
                 case KeyJmlLexer.PACKAGE:
                 case KeyJmlLexer.PUBLIC:
@@ -116,8 +117,8 @@ public class SimpleJmlDetection implements IJmlDetection {
         } while (tok.getType() != Token.EOF);
 
         if (onlyModifier)
-            return JmlCommentType.MODIFIER;
+            return JmlComment.Type.MODIFIER;
 
-        return null;
+        return JmlComment.Type.UNKNOWN;
     }
 }
